// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown component should appear above the dropdown button 1`] = `
<DocumentFragment>
  <div
    class="dropdown is-up"
  >
    <div
      role="presentation"
    >
      <button
        class="button"
        tabindex="0"
      >
        <span>
          Item
        </span>
        <span
          class="icon is-normal"
        >
          <i
            class="mdi mdi-chevron-down mdi-24px"
          />
        </span>
      </button>
    </div>
    <div
      class="dropdown-menu"
      role="menu"
    >
      <div
        class="dropdown-content"
      >
        <div
          class="dropdown-item"
        >
          Item
        </div>
        <div
          class="dropdown-item"
        >
          Other
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Dropdown component should be right-aligned when using "right" prop 1`] = `
<DocumentFragment>
  <div
    class="dropdown is-right"
  >
    <div
      role="presentation"
    >
      <button
        class="button"
        tabindex="0"
      >
        <span>
          Item
        </span>
        <span
          class="icon is-normal"
        >
          <i
            class="mdi mdi-chevron-down mdi-24px"
          />
        </span>
      </button>
    </div>
    <div
      class="dropdown-menu"
      role="menu"
    >
      <div
        class="dropdown-content"
      >
        <div
          class="dropdown-item"
        >
          Item
        </div>
        <div
          class="dropdown-item"
        >
          Other
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Dropdown component should concat classname in props with classname 1`] = `
<DocumentFragment>
  <div
    class="dropdown other-class"
  >
    <div
      role="presentation"
    >
      <button
        class="button"
        tabindex="0"
      >
        <span>
          Item
        </span>
        <span
          class="icon is-normal"
        >
          <i
            class="mdi mdi-chevron-down mdi-24px"
          />
        </span>
      </button>
    </div>
    <div
      class="dropdown-menu"
      role="menu"
    >
      <div
        class="dropdown-content"
      >
        <div
          class="dropdown-item is-active"
        >
          Item
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Dropdown component should have custom inline styles 1`] = `
<DocumentFragment>
  <div
    class="dropdown"
    style="width: 400px;"
  >
    <div
      role="presentation"
    >
      <button
        class="button"
        tabindex="0"
      >
        <span>
          Item
        </span>
        <span
          class="icon is-normal"
        >
          <i
            class="mdi mdi-chevron-down mdi-24px"
          />
        </span>
      </button>
    </div>
    <div
      class="dropdown-menu"
      role="menu"
    >
      <div
        class="dropdown-content"
      >
        <div
          class="dropdown-item is-active"
        >
          Item
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Dropdown component should have divider 1`] = `
<DocumentFragment>
  <div
    class="dropdown"
    style="width: 400px;"
  >
    <div
      role="presentation"
    >
      <button
        class="button"
        tabindex="0"
      >
        <span>
          Item
        </span>
        <span
          class="icon is-normal"
        >
          <i
            class="mdi mdi-chevron-down mdi-24px"
          />
        </span>
      </button>
    </div>
    <div
      class="dropdown-menu"
      role="menu"
    >
      <div
        class="dropdown-content"
      >
        <div
          class="dropdown-item is-active"
        >
          Item
        </div>
        <hr
          class="dropdown-divider"
        />
        <div
          class="dropdown-item"
        >
          Other
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Dropdown component should render 1`] = `
<DocumentFragment>
  <div
    class="dropdown"
  >
    <div
      role="presentation"
    >
      <button
        class="button"
        tabindex="0"
      >
        <span>
          Item
        </span>
        <span
          class="icon is-normal"
        >
          <i
            class="mdi mdi-chevron-down mdi-24px"
          />
        </span>
      </button>
    </div>
    <div
      class="dropdown-menu"
      role="menu"
    >
      <div
        class="dropdown-content"
      >
        <div
          class="dropdown-item is-active"
        >
          Item
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Dropdown component should show custom label passed to the label prop 1`] = `
<DocumentFragment>
  <div
    class="dropdown"
  >
    <div
      role="presentation"
    >
      <button
        class="button"
        tabindex="0"
      >
        <span>
          test label
        </span>
        <span
          class="icon is-normal"
        >
          <i
            class="mdi mdi-chevron-down mdi-24px"
          />
        </span>
      </button>
    </div>
    <div
      class="dropdown-menu"
      role="menu"
    >
      <div
        class="dropdown-content"
      >
        <div
          class="dropdown-item"
        >
          Item
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Dropdown component should show the label of the first dropdown item when no custom label is passed 1`] = `
<DocumentFragment>
  <div
    class="dropdown"
  >
    <div
      role="presentation"
    >
      <button
        class="button"
        tabindex="0"
      >
        <span>
          Item
        </span>
        <span
          class="icon is-normal"
        >
          <i
            class="mdi mdi-chevron-down mdi-24px"
          />
        </span>
      </button>
    </div>
    <div
      class="dropdown-menu"
      role="menu"
    >
      <div
        class="dropdown-content"
      >
        <div
          class="dropdown-item"
        >
          Item
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
